Edicion de juan en index.html

--- a/Files/index.html
+++ b/Files/index.html
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <p>Branch "Demostración Uno"</p>
+    <p>Esto fue editado por juan</p>
 </body>
 </html>
